--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
     font-family: serif;
     color: white;
-    background-color: rgb(21, 21, 26);
+    background-color:#1b1b1b;
 }
 
 h1{
@@ -41,14 +41,18 @@ p{
   }
   
   nav > ul > li {
-    background-color: white;
+    background-color: #4e4e4e;
     position: relative;
     height: 100%;
     flex: 1;
   }
   
+  nav > ul > li:hover{
+    background-color: rgb(59, 59, 59);
+  }
+
   nav > ul > li:hover > a{
-    color: #2169EC;
+    color: white;
   }
   
   nav > ul > li > a {
@@ -60,7 +64,7 @@ p{
   
   li a {
     text-decoration: none;
-    color: black;
+    color: white;
   }
   
   .menu-deroulant > a:after{
@@ -89,11 +93,11 @@ p{
   .sous-menu {
     margin-top: var(--hauteur-menu);
     width: 100%;
-    text-align: left;
+    text-align: center;
     overflow: hidden;
     max-height: 0;
     border-radius: 2px;
-    background-color: white;
+    background-color: #4e4e4e;
   }
   
   .menu-deroulant:hover > .sous-menu {
@@ -116,11 +120,12 @@ p{
   }
   
   .sous-menu > li:hover {
-    background-color: rgba(33, 105, 236, 0.3);
+    background-color: rgb(40,40,40,50%);
   }
   
   .sous-menu > li > a {
     align-items: center;
+    text-align: center;
     display: flex;
     height: 50px;
     padding-left: 20px;
