--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    align-items: center;
+    justify-content: flex-start;
     background-color: #121212;
     color: white;
     display: flex;
@@ -16,7 +16,7 @@ h1{
 }
 
 article{
-    align-self: right;
+    align-self: flex-end;
     background-color: lightslategray;
     display: inline-block;
     padding: 20px;
